# homer

./: .travis.yml  Cargo.toml  DOCS.md  README.md  Rocket.toml
snap/: snapcraft.yaml
src/: main.rs
src/api/: hue.rs  mod.rs
templates/: index.html.hbs
