[package]
name = "homer"
version = "0.1.0"
authors = ["Stefan Berggren <nsg@nsg.cc>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
curl = "0.4.8"
serde = "1.0.11"
serde_json = "1.0.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "json"]
